# belt

./: .env  Cargo.toml  README.md  askama.toml  diesel.toml  docker-compose.YAML  test.txt
scaffolds/: test.txt
scaffolds/initial/scaffolds/: Cargo.toml.jinja
scaffolds/initial/static/templates/: base.html  index.html
scaffolds/initial/templates/: Cargo.toml
src/: main.rs
src/cli/: mod.rs
src/file_ops/: initialize.rs  mod.rs  template_writer.rs  utils.rs
